--- a/index.html
+++ b/index.html
@@ -575,6 +575,87 @@
     text-align: center !important;
 }
 
+/* ================================================== */
+/* MELHORIAS APENAS PARA CELULAR (Telas até 768px) */
+/* ================================================== */
+@media screen and (max-width: 768px) {
+
+    /* 1. O Container Principal dos ícones inferiores */
+    /* TROQUE '.sua-classe-do-container-inferior' pelo nome real da div que segura todos os ícones */
+    .sua-classe-do-container-inferior {
+        display: grid;
+        /* Cria 2 colunas de tamanho igual */
+        grid-template-columns: 1fr 1fr; 
+        /* Espaço entre os cartões */
+        gap: 15px;
+        padding: 20px;
+        /* Garante que use a largura total */
+        width: 100%;
+        box-sizing: border-box;
+        /* Uma cor de fundo sutil para separar do resto */
+        background-color: rgba(255, 255, 255, 0.05);
+        border-radius: 20px 20px 0 0;
+    }
+
+    /* 2. Estilo Geral dos Cartões (os quadradinhos) */
+    /* TROQUE '.sua-classe-do-cartao' pelo nome da div de cada item individual */
+    .sua-classe-do-cartao {
+        background: rgba(15, 25, 35, 0.8); /* Fundo mais escuro */
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 12px;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        min-height: 100px; /* Altura mínima para ficarem maiores */
+    }
+
+    /* --- DESTAQUES ESPECÍFICOS --- */
+
+    /* 3. Assertividade (O primeiro card) - Fica GIGANTE no topo */
+    /* Use ':first-child' se ele for o primeiro, ou a classe específica dele */
+    .sua-classe-do-container-inferior > div:first-child {
+        grid-column: 1 / -1; /* Faz ele ocupar as duas colunas (largura total) */
+        background: linear-gradient(45deg, rgba(0, 255, 127, 0.1), transparent);
+        border-color: #00ff7f;
+    }
+
+    /* Aumenta a fonte da porcentagem no mobile */
+    .sua-classe-do-container-inferior > div:first-child h2, 
+    .sua-classe-do-container-inferior > div:first-child .porcentagem-grande {
+        font-size: 2.5em !important; /* Letra bem grande */
+        margin: 10px 0;
+    }
+
+    /* 4. Última Rosa (O penúltimo card) - Destaque também */
+    /* Ajuste o seletor para pegar o card da Rosa */
+    .card-ultima-rosa {
+         grid-column: 1 / -1; /* Largura total também */
+         background: linear-gradient(45deg, rgba(255, 0, 85, 0.1), transparent);
+         border-color: #ff0055;
+         flex-direction: row; /* Mostra os dados lado a lado */
+         justify-content: space-around;
+    }
+    .card-ultima-rosa div {
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+
+    /* 5. Melhorando os botões "Ver" e "Acessar" para toque */
+    /* Se eles forem links <a> ou botões <button> */
+    .sua-classe-do-cartao a,
+    .sua-classe-do-cartao button {
+        margin-top: 10px;
+        padding: 10px 20px;
+        width: 80%; /* Botão mais largo para facilitar o toque */
+        background-color: rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+}
     </style>
 </head>
 <body>
