--- a/index.html
+++ b/index.html
@@ -1731,6 +1731,7 @@ function aplicarResetRisco() {
 /* ======== DETECÇÃO AUTOMÁTICA ======== */
 function detectarDevice() {
     const mobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+
     if (mobile) {
         document.body.classList.add("mobile");
         document.body.classList.remove("desktop");
@@ -1739,6 +1740,13 @@ function detectarDevice() {
         document.body.classList.remove("mobile");
     }
 }
+
+window.addEventListener("resize", detectarDevice);
+window.addEventListener("load", detectarDevice);
+
+// ⚠️ ESSENCIAL – OBRIGA O MOBILE FUNCIONAR
+detectarDevice();
+document.addEventListener("DOMContentLoaded", detectarDevice);
 window.addEventListener("resize", detectarDevice);
 window.addEventListener("load", detectarDevice);
 
