--- a/index.html
+++ b/index.html
@@ -667,6 +667,79 @@ grid-template-columns:
     }
 }
 
+/* === RODAPÉ ULTRA PREMIUM (MESMA LÓGICA DO CABEÇALHO) === */
+.stats-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    background: rgba(10, 10, 15, 0.98);
+    border-top: 2px solid var(--cor-primaria);
+
+    /* MESMO MODELO DO CABEÇALHO */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0 6px;
+    height: 70px;
+
+    z-index: 100;
+    box-sizing: border-box;
+}
+
+/* Cada item do rodapé agora é flexível */
+.stat-item {
+    flex: 1;                           /* ocupa espaço igual */
+    min-width: 0;                      /* PERMITE encolher sem quebrar */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0 3px;
+
+    border-right: 1px solid rgba(255,255,255,0.06);
+}
+
+.stat-item:last-child {
+    border-right: none;
+}
+
+/* Textos agora se ajustam e nunca cortam nada */
+.stat-label,
+.stat-value,
+.stat-sub {
+    font-size: 0.70rem;
+    text-align: center;
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    width: 100%;
+}
+
+/* Ajuste automático no mobile */
+@media (max-width: 450px) {
+    .stats-footer {
+        height: 65px;
+    }
+
+    .stat-label {
+        font-size: 0.55rem;
+    }
+
+    .stat-value {
+        font-size: 0.85rem;
+    }
+
+    .stat-sub {
+        font-size: 0.60rem;
+    }
+}
+
 /* =========== MOBILE ULTRA PREMIUM =========== */
 
 /* Mostrar/ocultar automaticamente */
