--- a/index.html
+++ b/index.html
@@ -1008,20 +1008,20 @@ body {
 
 <!-- PADRÕES IA -->
 <div class="stat-item">
-    <span class="stat-label">📘 PADRÕES IA</span>
+    <span class="stat-label">📘IA</span>
     <div class="stat-value" id="btnPadroesIA">--</div>
 </div>
 
 <!-- ESTRATÉGIA IA -->
 <div class="stat-item">
-    <span class="stat-label">🎯 ESTRATÉGIA IA</span>
+    <span class="stat-label">🎯 IA</span>
     <div class="stat-value" id="btnEstrategiaIA">Aperte</div>
 </div>
 
         <div class="stat-item" id="btnMentoria"
      style="cursor:pointer;"
      onclick="window.open('https://wa.me/5551989378751','_blank')">
-    <span class="stat-label">🎓 MENTORIA</span>
+    <span class="stat-label">🎓 </span>
     <div class="stat-value" style="font-size:0.9rem;">Aperte</div>
 </div>
 
